--- a/manifest.json
+++ b/manifest.json
@@ -8,32 +8,32 @@
   "theme_color": "#74b9ff",
   "icons": [
     {
-      "src": "src/icons/icon-72x72.png",
+      "src": "/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "src/icons/icon-96x96.png",
+      "src": "/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "src/icons/icon-128x128.png",
+      "src": "/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "src/icons/icon-144x144.png",
+      "src": "/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "src/icons/icon-152x152.png",
+      "src": "/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "src/icons/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
@@ -42,13 +42,13 @@
   "lang": "id-ID",
   "screenshots": [
     {
-      "src": "src/screenshots/home.png",
+      "src": "/screenshots/home.png",
       "sizes": "1600x900",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "src/screenshots/focus-mode.png",
+      "src": "/screenshots/focus-mode.png",
       "sizes": "1600x900",
       "type": "image/png",
       "form_factor": "wide"
